@startuml

title __FACADE's Class Diagram__\n

  namespace com.atguigu.facade {
    class com.atguigu.facade.Client {
        {static} + main()
    }
  }
  

  namespace com.atguigu.facade {
    class com.atguigu.facade.DVDPlayer {
        {static} - instance : DVDPlayer
        {static} + getInstance()
        + off()
        + on()
        + pause()
        + play()
    }
  }
  

  namespace com.atguigu.facade {
    class com.atguigu.facade.HomeTheaterFacade {
        + HomeTheaterFacade()
        + end()
        + pause()
        + play()
        + ready()
    }
  }
  

  namespace com.atguigu.facade {
    class com.atguigu.facade.Popcorn {
        {static} - instance : Popcorn
        {static} + getInstance()
        + off()
        + on()
        + pop()
    }
  }
  

  namespace com.atguigu.facade {
    class com.atguigu.facade.Projector {
        {static} - instance : Projector
        + focus()
        {static} + getInstance()
        + off()
        + on()
    }
  }
  

  namespace com.atguigu.facade {
    class com.atguigu.facade.Screen {
        {static} - instance : Screen
        + down()
        {static} + getInstance()
        + on()
        + up()
    }
  }
  

  namespace com.atguigu.facade {
    class com.atguigu.facade.Stereo {
        {static} - instance : Stereo
        {static} + getInstance()
        + off()
        + on()
        + up()
    }
  }
  

  namespace com.atguigu.facade {
    class com.atguigu.facade.TheaterLight {
        {static} - instance : TheaterLight
        + bright()
        + dim()
        {static} + getInstance()
        + off()
        + on()
    }
  }
  

  com.atguigu.facade.HomeTheaterFacade o-- com.atguigu.facade.DVDPlayer : dvdPlayer
  com.atguigu.facade.HomeTheaterFacade o-- com.atguigu.facade.Popcorn : popcorn
  com.atguigu.facade.HomeTheaterFacade o-- com.atguigu.facade.Projector : projector
  com.atguigu.facade.HomeTheaterFacade o-- com.atguigu.facade.Screen : screen
  com.atguigu.facade.HomeTheaterFacade o-- com.atguigu.facade.Stereo : stereo
  com.atguigu.facade.HomeTheaterFacade o-- com.atguigu.facade.TheaterLight : theaterLight


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
